# gerona

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LibBotHardware  LibUtil  README.md  package.xml  stack.xml
LibBotHardware/: Actuators.cpp  Actuators.h  Adns.cpp  Adns.h  Avr32Params.cpp  Avr32Params.h  Avr32UiHandler.cpp  Avr32UiHandler.h  Basetime.cpp  Basetime.h  CMakeLists.txt  CarmenSerial.c  CarmenSerial.h  Compass.cpp  Compass.h  Crc16.h  DataListener.cpp  DataListener.h  Joystick.cpp  Joystick.h  LaserFx6.cpp  LaserFx6.h  LogAdapter.cpp  LogAdapter.h  MouseFlodometry.cpp  MouseFlodometry.h  MsgPrint.h  Odometry.cpp  Odometry.h  PidSpeedController.cpp  PidSpeedController.h  PtzController.cpp  PtzController.h  QuMessage.h  Ramaxx.cpp  Ramaxx.h  RamaxxLog.cpp  RamaxxLog.h  Ranger.cpp  Ranger.h  (+25 more)
LibClustering/: CMakeLists.txt  Cluster.hpp  Clustering.h  ClusteringAlgorithm.hpp  DataDense.hpp  DataSparse.hpp  DataStructure.hpp  Distance.hpp  EMMaxTest.cpp  EMaxTest.cpp  InitializationPlusPlus.hpp  InitializationRandom.hpp  KMeans.hpp  KMeansTest.cpp  Traits.hpp  Vector.hpp
LibMlsmap/: CMakeLists.txt  MlsMapAtats.h  MlsMapStats.cpp  TestMls.cpp  binary.cpp  binary.h  binaryreader.cpp  binaryreader.h  binarywriter.cpp  binarywriter.h  field.h  mlsmap.h  surface.cpp  surface.h  vectorcell.cpp  vectorcell.h  visualizer.cpp  visualizer.h
LibOdoCalib/: ActMultiArrayProxy.h  ActMultiarrayProxy.cpp  AxisbaseEstimator.cpp  AxisbaseEstimator.h  BetaEstimator.cpp  BetaEstimator.h  CMakeLists.txt  CalibBotInterface.h  Calibration.h  CircleEstimator.cpp  DataMission.cpp  DataMission.h  DistanceTracker.cpp  DistanceTracker.h  DriveCircleAction.cpp  DriveCircleAction.h  DriveCircleMission.cpp  DriveCircleMission.h  DriveStraightAction.cpp  DriveStraightAction.h  DriveStraightMission.cpp  DriveStraightMission.h  DualAxisCalib.cpp  DualAxisCalib.h  EncoderEstimator.cpp  EncoderEstimator.h  EncoderMission.cpp  EncoderMission.h  HallEstimator.cpp  HallEstimator.h  KalmanWheelbase.cpp  KalmanWheelbase.h  MoveAction.cpp  MoveAction.h  MoveDistAction.cpp  MoveDistAction.h  MoveGoalAction.cpp  MoveGoalAction.h  MoveTimeAction.cpp  MoveTimeAction.h  (+29 more)
LibPath/: CMakeLists.txt  CMakeLists.txt.user.2.3pre1
LibPath/ReedsShepp/: CircleSegment.cpp  CircleSegment.h  CostPrecomputation.cpp  Curve.cpp  Curve.h  CurveGenerator.cpp  CurveGenerator.h  CurveRenderer.cpp  CurveRenderer.h  CurveSegment.cpp  CurveSegment.h  CurveTest.cpp  GeometryHelper.cpp  GeometryHelper.h  LineSegment.cpp  LineSegment.h  UnitTest.cpp
LibPath/a_star/: AStar.cpp  AStar.h  Node.cpp  OpenList.h
LibPath/common/: Bresenham2d.cpp  Bresenham2d.h  GridMap2d.cpp  GridMap2d.h  Map.cpp  Map.h  MapMath.cpp  MapMath.h  Path.cpp  Point2d.cpp  Point2d.h  Pose2d.cpp  Pose2d.h  SimpleGridMap2d.cpp  SimpleGridMap2d.h  simbot4ws.cpp
LibPath/evaluation/: MapRenderer.hpp  PathRenderer.hpp  Util.hpp  evaluator.cpp  evaluator.h
LibPath/generic/: Algorithms.hpp  BreadthFirstSearch.hpp  Common.hpp  Heuristics.hpp  MapManager.hpp  Neighborhood.hpp  NodeManager.hpp  SearchAlgorithm.hpp
LibPath/sampling/: CentroidRadiusGoalRegion.cpp  CentroidRadiusGoalRegion.h  GoalRegion.cpp  GoalRegion.h  RingGoalRegion.cpp  RingGoalRegion.h  SamplingPlanner.cpp  SamplingPlanner.h
LibRandom/: 00README.txt  AUTHORS  CMakeLists.txt  INSTALL  LICENSE.txt  NEWS
LibRandom/cmake/: CMakeLists.txt  FindRandomLib.cmake  randomlib-config-version.cmake.in  randomlib-config.cmake.in
LibRandom/include/: Makefile.mk
LibRandom/src/: CMakeLists.txt  Random.cpp
LibRobot/: AckermannSteering.cpp  AckermannSteering.h  BoundaryFinder.cpp  BoundaryFinder.h  CMakeLists.txt  Costmap.cpp  Costmap.h  Laser2dScan.cpp  Laser2dScan.h  LaserEnvironment.cpp  LaserEnvironment.h  WheelOdometry.cpp  WheelOdometry.h  icrtest.cpp
LibUtil/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  CvContourManipulator.cpp  CvContourManipulator.h  CvMathHelper.cpp  CvMathHelper.h  EggTimer.cpp  EigenTools.h  LaserTo3DTransformation.cpp  LaserTo3DTransformation.h  Line2d.cpp  Line2d.h  LogCollector.cpp  LogCollector.h  LowPassFilter.cpp  LowPassFilter.h  MathHelper.cpp  MathHelper.h  Misc.h  Path.h  QtCvImageConverter.cpp  QtCvImageConverter.h  RamaxxException.cpp  RamaxxException.h  StatsEstimator.h  Strings.h
brisk/: CMakeLists.txt
brisk/src/: brisk.cpp
carlike_paths/: CMakeLists.txt  mainpage.dox
carlike_paths/src/: path4ws_sim.cpp  path4ws_simulator.cpp  path4ws_simulator.h  path_field.cpp  path_field.h  simbot4ws.h
control_msgs/: CMakeLists.txt  package.xml
control_msgs/msg/: TorqueCommand.msg
costmap/: CMakeLists.txt  manifest.xml  package.xml
costmap/launch/: costmap_default.launch
costmap/src/: CostmapNode.cpp  CostmapNode.h  GradientCostmapNode.cpp
csnavigation/: CMakeLists.txt  package.xml
freespace_finder/: CMakeLists.txt  manifest.xml
freespace_finder/launch/: sim.launch
freespace_finder/src/: CircleFinder.cpp  Timer.cpp  VoronoiDiagramGenerator.h  largest_empty_circle.cpp  lec_node.cpp
gerona/: CMakeLists.txt  package.xml
gerona_examples/: CMakeLists.txt  README.md  package.xml
gerona_examples/cartographer/: subt_x.lua
gerona_examples/costmap/: minimal.yaml
gerona_examples/launch/: gazebo_example_pioneer.launch  gazebo_example_pioneer_follower_only.launch  gazebo_example_summit.launch  gazebo_example_summit_mbc.launch  stage_example_amcl.launch  stage_example_odometry.launch  subt_tunnel_cartographer.launch  subt_tunnel_odom.launch
gerona_examples/nodes/: gazebo2tf.py
gerona_examples/robots/: summit_xl_rgbd_down.urdf.xacro
gerona_examples/rviz/: robot_navigation_gazebo_pioneer.rviz  robot_navigation_stage.rviz  (+4 more)
motion_control/: CMakeLists.txt  manifest.xml
navigation_launch/: CMakeLists.txt  package.xml
path_control/: CMakeLists.txt  package.xml
path_follower/: CMakeLists.txt  README.md  laser_config.yaml  laser_config_back.yaml  laser_config_front.yaml  obstacle_map.apex  package.xml
path_msgs/: CMakeLists.txt  package.xml
path_planner/: CMakeLists.txt  README.md  package.xml
(+1484 files in other folders)
