<?xml version="1.0"?>
<package>
  <name>control_msgs</name>
  <version>0.0.0</version>
  <description>This package bundles all messages used by the robot controller packages.</description>

  <maintainer email="goran.huskic@uni-tuebingen.de">Goran Huskić</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
